合宿終わり

--- a/whisper/bunrui.ipynb
+++ b/whisper/bunrui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     "    \n",
     "\n",
     "    ask_str += \"\"\"この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-    "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\"\"\"\n",
+    "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\"\"\"\n",
     "        \n",
     "    #print(ask_str)\n",
     "    return ask_str\n",
@@ -124,7 +124,7 @@
     "    例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
     "\n",
     "    出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。\n",
-    "    分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\n",
+    "    分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
     "\n",
     "    \"\"\"\n",
     "    messages = [{\"role\": \"user\", \"content\": question},]\n",
@@ -188,6 +188,8 @@
     "                \n",
     "    bunrui_num_list = list(set(bunrui_num_list))#setで重複が消えるらしいが{}になるのでlist()を使ってリストに戻している＆sort()で昇順にソート\n",
     "    bunrui_num_list = sorted(bunrui_num_list)\n",
+    "    if -1 in bunrui_num_list:\n",
+    "        bunrui_num_list.pop(0) #もし-1があったらそれは消去する\n",
     "    print(bunrui_num_list)\n",
     "    print(\"ソート終了！！！\")\n",
     "    print(\"ーーーーーーーーーーーーーーーーーー\")\n",
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -226,11 +228,11 @@
       "\n",
       "    「\n",
       "    \n",
-      "近代京都において、琳派を手本として創作活動を行った神坂雪佳(1866～1942)。京に生まれた雪佳は、はじめ四条派の画法を学びますが、新しい時代にふさわしい工芸図案の必要性を認識し、図案家の岸光景に師事します。押し寄せる西洋文化を意識しながらも、雪佳は装飾芸術である「琳派」に傾倒し、図案家、画家として活躍しました。雪佳が手掛けたデザインは、染織、陶芸、漆芸から室内装飾や庭園まで実に多面的です。これは、雪佳が敬愛した本阿弥光悦や尾形光琳の柔軟な活動に倣うものといえるでしょう。琳派は、江戸初期の本阿弥光悦、俵屋宗達(生没年不詳)にはじまり、江戸中期の光琳やその弟・尾形乾山、江戸後期の酒井抱一らによって私淑という形で受け継がれてきました。平安以来の美意識をそなえた装飾性豊かな作風で、絵画や工芸といった領域を越え、さまざまな意匠を生み出してきた琳派は、近代以降も多くの分野にわたって影響を与え続けています。本展では、雪佳が手本とした琳派の美の潮流を本阿弥光悦や尾形光琳らの名品にたどるとともに、古典と近代的発想を融合させ、美術と意匠の二つの分野を自在に往来した近代琳派・神坂雪佳の多彩な世界をご覧いただきます。\n",
+      "画家・絵本作家の町田尚子(まちだ・なおこ／1968～)は、絵本の物語を繊細なタッチと大胆な構図で描くことでその文章が生きる空間を表現し、高い評価を受けています。町田の座右の銘は、「隙あらば猫」。童話や遠野物語、怪談絵本など、様々な物語の中で、猫を主人公として、時に脇役として登場させています。描かれた猫たちは、毛並みから仕草、表情まで緻密に表現され、猫と共に暮らす町田の観察眼の鋭さ、そして猫を慈しむ眼差しが感じられます。今回は、デビュー作や代表作など数々の絵本原画を貴重な制作資料とともに展示します。この機会に、絵本原画そのものが持つ繊細な筆致や迫力のある描写をお楽しみください。\n",
       "\n",
       "    」\n",
       "\n",
-      "    上記の説明は「つながる琳派スピリット　神坂雪佳展」という美術展についての説明文です。\n",
+      "    上記の説明は「隙あらば猫 町田尚子絵本原画展」という美術展についての説明文です。\n",
       "    さらにこれを見た人が、この展示に関連したキーワードを以下に記載しました。（キーワードがない場合もあります。）\n",
       "    「」\n",
       "    この説明とキーワード・展示名をもとに、この展示を日本十進分類で分類してください。\n",
@@ -256,10 +258,10 @@
       "    例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "\n",
       "    出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。\n",
-      "    分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\n",
+      "    分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
       "\n",
       "    \n",
-      "70, 90\n",
+      "70,79\n",
       "芸術、美術\n",
       "70 芸術、美術は更に以下のように分けられます。\n",
       "71 彫刻、オブジェ\n",
@@ -270,22 +272,9 @@
       "76 音楽、舞踊、バレエ\n",
       "77 演劇、映画、大衆芸能\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\n",
-      "72, 75\n",
-      "文学\n",
-      " 90 文学は更に以下のように分けられます。\n",
-      "91 日本文学\n",
-      "92 中国文学、その他の東洋文学\n",
-      "93 英米文学\n",
-      "94 ドイツ文学、その他のゲルマン文学\n",
-      "95 フランス文学、プロバンス文学\n",
-      "96 スペイン文学、ポルトガル文学\n",
-      "97 イタリア文学、その他のロマンス文学\n",
-      "98 ロシア・ソビエト文学、その他のスラブ文学\n",
-      "99 その他の諸言語文学\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\n",
-      "70, 90, 91\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "72\n",
+      "諸芸、娯楽\n",
       "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
       "721 日本画\n",
       "722 東洋画\n",
@@ -296,64 +285,46 @@
       "727 グラフィックデザイン、図案\n",
       "728 書、書道\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\n",
-      "70, 721, 727\n",
-      "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、75 工芸は更に以下のように分けられます。\n",
-      "751 陶磁工芸\n",
-      "752 漆工芸\n",
-      "753 染織工芸\n",
-      "754 木竹工芸\n",
-      "755 宝石、牙角、皮革工芸\n",
-      "756 金工芸\n",
-      "757 デザイン、装飾美術\n",
-      "758 美術家具\n",
-      "759 人形、玩具\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。\n",
-      "70, 757\n",
-      "[70, 72, 75, 90, 91, 721, 727, 757]\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "70,79,727,728\n",
+      "[70, 72, 79, 727, 728]\n",
       "ソート終了！！！\n",
       "ーーーーーーーーーーーーーーーーーー\n",
-      "展示名: つながる琳派スピリット　神坂雪佳展\n",
+      "展示名: 隙あらば猫 町田尚子絵本原画展\n",
       "展示説明: \n",
-      "近代京都において、琳派を手本として創作活動を行った神坂雪佳(1866～1942)。\n",
-      "京に生まれた雪佳は、はじめ四条派の画法を学びますが、新しい時代にふさわしい工芸図案の必要性を認識し、図案家の岸光景に師事します。\n",
-      "押し寄せる西洋文化を意識しながらも、雪佳は装飾芸術である「琳派」に傾倒し、図案家、画家として活躍しました。\n",
-      "雪佳が手掛けたデザインは、染織、陶芸、漆芸から室内装飾や庭園まで実に多面的です。\n",
-      "これは、雪佳が敬愛した本阿弥光悦や尾形光琳の柔軟な活動に倣うものといえるでしょう。\n",
-      "琳派は、江戸初期の本阿弥光悦、俵屋宗達(生没年不詳)にはじまり、江戸中期の光琳やその弟・尾形乾山、江戸後期の酒井抱一らによって私淑という形で受け継がれてきました。\n",
-      "平安以来の美意識をそなえた装飾性豊かな作風で、絵画や工芸といった領域を越え、さまざまな意匠を生み出してきた琳派は、近代以降も多くの分野にわたって影響を与え続けています。\n",
-      "本展では、雪佳が手本とした琳派の美の潮流を本阿弥光悦や尾形光琳らの名品にたどるとともに、古典と近代的発想を融合させ、美術と意匠の二つの分野を自在に往来した近代琳派・神坂雪佳の多彩な世界をご覧いただきます。\n",
+      "画家・絵本作家の町田尚子(まちだ・なおこ／1968～)は、絵本の物語を繊細なタッチと大胆な構図で描くことでその文章が生きる空間を表現し、高い評価を受けています。\n",
+      "町田の座右の銘は、「隙あらば猫」。\n",
+      "童話や遠野物語、怪談絵本など、様々な物語の中で、猫を主人公として、時に脇役として登場させています。\n",
+      "描かれた猫たちは、毛並みから仕草、表情まで緻密に表現され、猫と共に暮らす町田の観察眼の鋭さ、そして猫を慈しむ眼差しが感じられます。\n",
+      "今回は、デビュー作や代表作など数々の絵本原画を貴重な制作資料とともに展示します。\n",
+      "この機会に、絵本原画そのものが持つ繊細な筆致や迫力のある描写をお楽しみください。\n",
       "\n",
       "\n",
       "展示キーワード: \n",
       "以下に分類結果を表示します\n",
       "70 芸術、美術\n",
       "72 絵画、書、書道\n",
-      "75 工芸\n",
-      "90 文学\n",
-      "91 日本文学\n",
-      "721 日本画\n",
+      "79 諸芸、娯楽\n",
       "727 グラフィックデザイン、図案\n",
-      "757 デザイン、装飾美術\n"
+      "728 書、書道\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[70, 72, 75, 90, 91, 721, 727, 757]"
+       "[70, 72, 79, 727, 728]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exhibition_name = \"つながる琳派スピリット　神坂雪佳展\"\n",
+    "exhibition_name = \"隙あらば猫 町田尚子絵本原画展\"\n",
     "\n",
     "exhibition_describe = \"\"\"\n",
-    "近代京都において、琳派を手本として創作活動を行った神坂雪佳(1866～1942)。京に生まれた雪佳は、はじめ四条派の画法を学びますが、新しい時代にふさわしい工芸図案の必要性を認識し、図案家の岸光景に師事します。押し寄せる西洋文化を意識しながらも、雪佳は装飾芸術である「琳派」に傾倒し、図案家、画家として活躍しました。雪佳が手掛けたデザインは、染織、陶芸、漆芸から室内装飾や庭園まで実に多面的です。これは、雪佳が敬愛した本阿弥光悦や尾形光琳の柔軟な活動に倣うものといえるでしょう。琳派は、江戸初期の本阿弥光悦、俵屋宗達(生没年不詳)にはじまり、江戸中期の光琳やその弟・尾形乾山、江戸後期の酒井抱一らによって私淑という形で受け継がれてきました。平安以来の美意識をそなえた装飾性豊かな作風で、絵画や工芸といった領域を越え、さまざまな意匠を生み出してきた琳派は、近代以降も多くの分野にわたって影響を与え続けています。本展では、雪佳が手本とした琳派の美の潮流を本阿弥光悦や尾形光琳らの名品にたどるとともに、古典と近代的発想を融合させ、美術と意匠の二つの分野を自在に往来した近代琳派・神坂雪佳の多彩な世界をご覧いただきます。\n",
+    "画家・絵本作家の町田尚子(まちだ・なおこ／1968～)は、絵本の物語を繊細なタッチと大胆な構図で描くことでその文章が生きる空間を表現し、高い評価を受けています。町田の座右の銘は、「隙あらば猫」。童話や遠野物語、怪談絵本など、様々な物語の中で、猫を主人公として、時に脇役として登場させています。描かれた猫たちは、毛並みから仕草、表情まで緻密に表現され、猫と共に暮らす町田の観察眼の鋭さ、そして猫を慈しむ眼差しが感じられます。今回は、デビュー作や代表作など数々の絵本原画を貴重な制作資料とともに展示します。この機会に、絵本原画そのものが持つ繊細な筆致や迫力のある描写をお楽しみください。\n",
     "\"\"\"\n",
     "exhibition_keywords = \"\"\n",
     "\n",
@@ -361,6 +332,13 @@
     "\n",
     "bunrui_func(exhibition_name,exhibition_describe,exhibition_keywords)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
