--- a/whisper/test.ipynb
+++ b/whisper/test.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,23 +125,9 @@
       "28 伝記\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "20, 23, 70\n",
-      "社会科学\n",
-      " 30 社会科学は更に以下のように分けられます。\n",
-      "31 政治\n",
-      "32 法律\n",
-      "33 経済\n",
-      "34 財政\n",
-      "35 統計\n",
-      "36 社会\n",
-      "37 教育\n",
-      "38 風俗習慣、民俗学、民族学\n",
-      "39 国防、軍事\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "20, 30, 36, 70\n",
+      "20,70\n",
       "芸術、美術\n",
-      " 70 芸術、美術は更に以下のように分けられます。\n",
+      "70 芸術、美術は更に以下のように分けられます。\n",
       "71 彫刻、オブジェ\n",
       "72 絵画、書、書道\n",
       "73 版画、印章、篆刻、印譜\n",
@@ -151,16 +137,14 @@
       "77 演劇、映画、大衆芸能\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。\n",
-      "70, 72\n",
-      "[20, 23, 30, 36, 70, 72]\n",
+      "70,72,73\n",
+      "[20, 70, 72, 73]\n",
       "ソート終了！！！\n",
       "以下に分類結果を表示します\n",
       "20 歴史、世界史、文化史\n",
-      "23 ヨーロッパ史、西洋史\n",
-      "30 社会科学\n",
-      "36 社会\n",
       "70 芸術、美術\n",
-      "72 絵画、書、書道\n"
+      "72 絵画、書、書道\n",
+      "73 版画、印章、篆刻、印譜\n"
      ]
     }
    ],
@@ -289,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +285,7 @@
       "あなたは日本の大阪府にいます。\n",
       "あなたは大阪大学ミュージアム同好会というサークルに所属しているロボットで、あなたの仕事はクライアントに言われた要求に最も近い展示を案内することです。\n",
       "クライアントが来て以下のようにあなたに尋ねました。\n",
-      "「海賊王になりたいです。海賊王に俺はなる！！！」\n",
+      "「織田信長に会いたいです！」\n",
       "\n",
       "今行われている展示は以下の4個です。またカッコの中にはその展示についての説明が書いてあります。\n",
       "\n",
@@ -321,24 +305,29 @@
       "\n",
       "回答文:\n",
       "わかりました！\n",
-      "なるほど、あなたは海賊王になりたいのですね！\n",
-      "海賊王になるという目標はとても素敵です！\n",
-      "\n",
-      "そんなあなたにおすすめの展示は「大航海時代展」です。\n",
+      "なるほど、あなたは織田信長に会いたいのですね！\n",
+      "織田信長は日本の歴史上重要な人物の一人で、戦国時代に活躍した武将です。\n",
       "\n",
       "\n",
-      "大航海時代展では、ヴァスコ・ダ・ガマやマルコ・ポーロといった偉大な航海者たちの活躍について学ぶことができます。\n",
-      "彼らは大航海時代に世界中を航海し、新しい地域や財宝を発見しました。\n",
-      "海賊たちもその時代に活躍していたので、海賊王になるためのヒントが見つかるかもしれませんよ！\n",
+      "そんなあなたにおすすめの展示は、「国際漫画展」です！\n",
+      "この展示では、アメコミからバンド・デシネ、そして日本の漫画まで数多くの作品が展示されています。\n",
       "\n",
       "\n",
-      "展示では、まるで当時の冒険に参加しているような感覚を味わえるような演出があります。\n",
-      "船に乗ったり、航海ルートをたどったりすることもできるんです。\n",
-      "そして、海賊たちの宝物のレプリカも展示されていることでしょう。\n",
-      "これは私の考えですが、その宝物に触れることで、海賊王になるイメージがより強くなるかもしれません。\n",
+      "この展示では、さまざまな漫画から織田信長に関連する内容を見つけることができるかもしれません。\n",
+      "たとえば、歴史の戦国時代をテーマにした漫画や、戦国時代の英雄たちを描いた作品などが展示されているかもしれません。\n",
       "\n",
       "\n",
-      "是非、「大航海時代展」で海賊王になるための探求の旅をはじめてみてください！\n",
+      "また、織田信長についての詳しい情報やエピソードも展示物や説明文で紹介されているかもしれません。\n",
+      "織田信長の生涯や活躍、その功績などを学ぶことができるでしょう。\n",
+      "\n",
+      "\n",
+      "ただし、展示説明文には具体的な情報が書かれていないため、展示物の内容や詳細は確定ではありません。\n",
+      "実際にはどのような作品が展示されているのか、どのような情報が得られるのか、実際に会場に足を運んで探求してみると良いでしょう。\n",
+      "\n",
+      "\n",
+      "織田信長について興味があるということでしたら、この展示はあなたにぴったりな選択肢だと思います！\n",
+      "是非、織田信長に関連する作品や情報を探しに来てください。\n",
+      "楽しい時間をお過ごしください！\n",
       "\n"
      ]
     }
@@ -350,7 +339,7 @@
     "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
     "openai.api_key = OPENAI_API_KEY\n",
     "\n",
-    "client_ask = \"海賊王になりたいです。海賊王に俺はなる！！！\"\n",
+    "client_ask = \"織田信長に会いたいです！\"\n",
     "\n",
     "exhibitions_list = [\n",
     "    \"大航海時代展(ルネサンスから始まる大航海時代について、ヴァスコ・ダ・ガマ、そしてマルコポーロの二人を中心に迫ります。)\",\n",
@@ -394,6 +383,25 @@
     "\n",
     "print(\"質問文:\\n\" + question)\n",
     "print(\"回答文:\\n\" + answer )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\" + str(10))\n",
+    "\n",
+    "print(f\"hello {10}\")"
    ]
   }
  ],
