分類を追加

--- a/whisper/bunrui.ipynb
+++ b/whisper/bunrui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -22,9 +22,9 @@
     "\n",
     "bunrui_list_2 = [\n",
     "    \"総記\", \"図書館、図書館情報学\", \"図書、書誌学\", \"百科事典、用語索引\", \"一般論文集、一般講演集、雑著\",\n",
-    "    \"逐次刊行物、一般年鑑\", \"団体、博物館\", \"ジャーナリズム、新聞\", \"叢書、全集、選集\", \"貴重書、郷土資料、その他の特別コレクション\",\n",
+    "    \"逐次刊行物、一般年鑑\", \"団体、博物館\", \"ジャーナリズム、新聞\", \"叢書、全集、選集\", \"郷土資料\",\n",
     "    \"哲学\", \"哲学各論\", \"東洋思想\", \"西洋哲学\", \"心理学\", \"倫理学、道徳\", \"宗教\", \"神道\", \"仏教\", \"キリスト教、ユダヤ教\",\n",
-    "    \"歴史、世界史、文化史\", \"日本史\", \"アジア史、東洋史\", \"ヨーロッパ史、西洋史\", \"アフリカ史\", \"北アメリカ史\", \"南アメリカ史\", \"オセアニア史、両極地方史\", \"伝記\", \"地理、地誌、紀行\",\n",
+    "    \"歴史、世界史、文化史\", \"日本史\", \"アジア史、東洋史\", \"ヨーロッパ史、西洋史\", \"アフリカ史\", \"北アメリカ史\", \"南アメリカ史\", \"オセアニア史、両極地方史\", \"人物伝\", \"地理、地誌、紀行\",\n",
     "    \"社会科学\", \"政治\", \"法律\", \"経済\", \"財政\", \"統計\", \"社会\", \"教育\", \"風俗習慣、民俗学、民族学\", \"国防、軍事\",\n",
     "    \"自然科学\", \"数学\", \"物理学\", \"化学\", \"天文学、宇宙科学\", \"地球科学、地学\", \"生物科学、一般生物学\", \"植物学\", \"動物学\", \"医学、薬学\",\n",
     "    \"技術、工学\", \"建設工学、土木工学\", \"建築学\", \"機械工学、原子力工学\", \"電気工学\", \"海洋工学、船舶工学、兵器、軍事工学\", \"金属工学、鉱山工学\", \"化学工業\", \"製造工業\", \"家政学、生活科学\",\n",
@@ -37,12 +37,14 @@
     "bunrui_list_72 = [\"日本画\",\"東洋画\",\"洋画\",\"絵画材料、技法\",\"素描、描画\",\"漫画、挿絵、児童画\",\"グラフィックデザイン、図案\",\"書、書道\"]\n",
     "bunrui_list_75 = [\"陶磁工芸\",\"漆工芸\",\"染織工芸\",\"木竹工芸\",\"宝石、牙角、皮革工芸\",\"金工芸\",\"デザイン、装飾美術\",\"美術家具\",\"人形、玩具\"]\n",
     "\n",
+    "bunrui_list_21 = [\"日本史全般\",\"日本史:原始時代(旧石器時代、縄文時代、弥生時代)\",\"日本史:古代(時代、飛鳥時代、奈良時代、平安時代)\",\"日本史:中世(鎌倉時代、南北朝時代、室町時代、戦国時代、安土桃山時代)\",\"日本史:近世(江戸時代)\",\"日本史:近代(明治時代、大正時代)\",\"日本史:現代(昭和時代以降)\"]\n",
+    "\n",
     "print(bunrui_list_2[70])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,23 +52,32 @@
     "    #global bunrui_list_2,bunrui_list_72,bunrui_list_75\n",
     "    bunrui_index = int(bunrui) #indexになってたの忘れてた！！！\n",
     "    non_splitable_list =[29,49,59,78,79]\n",
+    "    ask_str =\"\"\n",
     "    if bunrui_index in non_splitable_list :\n",
     "        #これらは第二次区分ではもう分割できない\n",
     "        #print(bunrui_index)\n",
     "        return -1\n",
     "    \n",
-    "    elif bunrui_index in [72,75]:\n",
+    "    elif bunrui_index in [72,75,21]:\n",
     "        #第三区部をここでやる！\n",
-    "        ask_str = \"あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、\"\n",
+    "        #21はおおやさんが自作した区分、これは↓の処理を施す必要はない\n",
+    "        if bunrui_index in [72,75]:\n",
+    "            ask_str = \"あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、\"\n",
+    "\n",
+    "\n",
     "        ask_str += f\"{bunrui} {bunrui_list_2[bunrui_index]}は更に以下のように分けられます。\\n\"\n",
     "        count = 10*bunrui_index + 1 #72→720のように第三区分用に変更する！\n",
-    "        while count not in [729,760] :\n",
+    "        while count not in [729,760,217] :\n",
     "            #カウントが区切り出ないときはどんどん追加していく感じ、カウントとリストのインデックスが違うことに注意！！→％つかってあまりで表現かな\n",
+    "            #上のnot in [] の中身に217を追加することでおおやさんの独自仕様に対応\n",
     "            #print(count)\n",
     "            if bunrui_index ==72:\n",
     "                ask_str += str(count) + \" \"+bunrui_list_72[(count-1)%10] + \"\\n\"\n",
     "            elif bunrui_index ==75:\n",
     "                ask_str += str(count) + \" \"+bunrui_list_75[(count-1)%10] + \"\\n\"\n",
+    "\n",
+    "            elif bunrui_index == 21:\n",
+    "                 ask_str += str(count) + \" \"+bunrui_list_21[(count-1)%10] + \"\\n\"\n",
     "            \n",
     "            count+=1\n",
     "\n",
@@ -167,7 +178,7 @@
     "\n",
     "    #ここから３区分分類スタート!\n",
     "    for bunrui in bunrui_num_list:\n",
-    "            if bunrui in [72,75]:\n",
+    "            if bunrui in [72,75,21]:\n",
     "                ask_str = ask_more_bunrui(bunrui)\n",
     "                print(ask_str)\n",
     "\n",
@@ -207,6 +218,9 @@
     "                print(str(bunrui_num) + \" \"+bunrui_list_72[bunrui_num -720 -1])\n",
     "            elif int(bunrui_num/10) ==  75 :\n",
     "                print(str(bunrui_num) + \" \"+bunrui_list_75[bunrui_num -750 -1])\n",
+    "\n",
+    "            elif int(bunrui_num/10) ==  21 :\n",
+    "                print(str(bunrui_num) + \" \"+bunrui_list_21[bunrui_num -210 -1])\n",
     "        else:\n",
     "            print(str(bunrui_num) + \" \"+bunrui_list_2[bunrui_num])\n",
     "        #print(\"\\n\")\n",
@@ -218,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -228,11 +242,11 @@
       "\n",
       "    「\n",
       "    \n",
-      "画家・絵本作家の町田尚子(まちだ・なおこ／1968～)は、絵本の物語を繊細なタッチと大胆な構図で描くことでその文章が生きる空間を表現し、高い評価を受けています。町田の座右の銘は、「隙あらば猫」。童話や遠野物語、怪談絵本など、様々な物語の中で、猫を主人公として、時に脇役として登場させています。描かれた猫たちは、毛並みから仕草、表情まで緻密に表現され、猫と共に暮らす町田の観察眼の鋭さ、そして猫を慈しむ眼差しが感じられます。今回は、デビュー作や代表作など数々の絵本原画を貴重な制作資料とともに展示します。この機会に、絵本原画そのものが持つ繊細な筆致や迫力のある描写をお楽しみください。\n",
+      "松平定信は古典の書写を日課とし、中でも『源氏物語』を7度も書き写しました。平安時代より読み継がれ、定信も愛読した『源氏物語』の世界をご紹介します。\n",
       "\n",
       "    」\n",
       "\n",
-      "    上記の説明は「隙あらば猫 町田尚子絵本原画展」という美術展についての説明文です。\n",
+      "    上記の説明は「新春企画展「松平定信と源氏物語」【特集陳列】〈山〉と〈月〉の日本画／刀剣セレクション3 ー桑博ドラゴンズー」という美術展についての説明文です。\n",
       "    さらにこれを見た人が、この展示に関連したキーワードを以下に記載しました。（キーワードがない場合もあります。）\n",
       "    「」\n",
       "    この説明とキーワード・展示名をもとに、この展示を日本十進分類で分類してください。\n",
@@ -261,7 +275,7 @@
       "    分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
       "\n",
       "    \n",
-      "70,79\n",
+      "70, 90\n",
       "芸術、美術\n",
       "70 芸術、美術は更に以下のように分けられます。\n",
       "71 彫刻、オブジェ\n",
@@ -273,8 +287,21 @@
       "77 演劇、映画、大衆芸能\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "72\n",
-      "諸芸、娯楽\n",
+      "70, 72\n",
+      "文学\n",
+      " 90 文学は更に以下のように分けられます。\n",
+      "91 日本文学\n",
+      "92 中国文学、その他の東洋文学\n",
+      "93 英米文学\n",
+      "94 ドイツ文学、その他のゲルマン文学\n",
+      "95 フランス文学、プロバンス文学\n",
+      "96 スペイン文学、ポルトガル文学\n",
+      "97 イタリア文学、その他のロマンス文学\n",
+      "98 ロシア・ソビエト文学、その他のスラブ文学\n",
+      "99 その他の諸言語文学\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "70, 90, 91\n",
       "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
       "721 日本画\n",
       "722 東洋画\n",
@@ -286,45 +313,66 @@
       "728 書、書道\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "70,79,727,728\n",
-      "[70, 72, 79, 727, 728]\n",
+      "70, 72, 728\n",
+      "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
+      "721 日本画\n",
+      "722 東洋画\n",
+      "723 洋画\n",
+      "724 絵画材料、技法\n",
+      "725 素描、描画\n",
+      "726 漫画、挿絵、児童画\n",
+      "727 グラフィックデザイン、図案\n",
+      "728 書、書道\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "70, 72, 728\n",
+      "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
+      "721 日本画\n",
+      "722 東洋画\n",
+      "723 洋画\n",
+      "724 絵画材料、技法\n",
+      "725 素描、描画\n",
+      "726 漫画、挿絵、児童画\n",
+      "727 グラフィックデザイン、図案\n",
+      "728 書、書道\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "70, 90, 728\n",
+      "[70, 72, 90, 91, 728]\n",
       "ソート終了！！！\n",
       "ーーーーーーーーーーーーーーーーーー\n",
-      "展示名: 隙あらば猫 町田尚子絵本原画展\n",
+      "展示名: 新春企画展「松平定信と源氏物語」【特集陳列】〈山〉と〈月〉の日本画／刀剣セレクション3 ー桑博ドラゴンズー\n",
       "展示説明: \n",
-      "画家・絵本作家の町田尚子(まちだ・なおこ／1968～)は、絵本の物語を繊細なタッチと大胆な構図で描くことでその文章が生きる空間を表現し、高い評価を受けています。\n",
-      "町田の座右の銘は、「隙あらば猫」。\n",
-      "童話や遠野物語、怪談絵本など、様々な物語の中で、猫を主人公として、時に脇役として登場させています。\n",
-      "描かれた猫たちは、毛並みから仕草、表情まで緻密に表現され、猫と共に暮らす町田の観察眼の鋭さ、そして猫を慈しむ眼差しが感じられます。\n",
-      "今回は、デビュー作や代表作など数々の絵本原画を貴重な制作資料とともに展示します。\n",
-      "この機会に、絵本原画そのものが持つ繊細な筆致や迫力のある描写をお楽しみください。\n",
+      "松平定信は古典の書写を日課とし、中でも『源氏物語』を7度も書き写しました。\n",
+      "平安時代より読み継がれ、定信も愛読した『源氏物語』の世界をご紹介します。\n",
       "\n",
       "\n",
       "展示キーワード: \n",
       "以下に分類結果を表示します\n",
       "70 芸術、美術\n",
       "72 絵画、書、書道\n",
-      "79 諸芸、娯楽\n",
-      "727 グラフィックデザイン、図案\n",
+      "90 文学\n",
+      "91 日本文学\n",
       "728 書、書道\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[70, 72, 79, 727, 728]"
+       "[70, 72, 90, 91, 728]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exhibition_name = \"隙あらば猫 町田尚子絵本原画展\"\n",
+    "exhibition_name = \"宮城県美術館所蔵　絵本原画の世界2022-23\"\n",
     "\n",
     "exhibition_describe = \"\"\"\n",
-    "画家・絵本作家の町田尚子(まちだ・なおこ／1968～)は、絵本の物語を繊細なタッチと大胆な構図で描くことでその文章が生きる空間を表現し、高い評価を受けています。町田の座右の銘は、「隙あらば猫」。童話や遠野物語、怪談絵本など、様々な物語の中で、猫を主人公として、時に脇役として登場させています。描かれた猫たちは、毛並みから仕草、表情まで緻密に表現され、猫と共に暮らす町田の観察眼の鋭さ、そして猫を慈しむ眼差しが感じられます。今回は、デビュー作や代表作など数々の絵本原画を貴重な制作資料とともに展示します。この機会に、絵本原画そのものが持つ繊細な筆致や迫力のある描写をお楽しみください。\n",
+    "「こどものとも」は芸術性の高い絵本づくりを目指し、1956年に福音館書店から創刊された月刊絵本です。「こどものとも」の魅力として、洋画や日本画、彫刻、漫画など、さまざまな分野で活躍す る作家たちが絵本づくりを手がけたことがあげられます。作家たちは、ものがたりの表現にふさわしい技法や材料を取りいれながら、これまでにない新しい絵本を生み出しました。\n",
+    "\n",
     "\"\"\"\n",
     "exhibition_keywords = \"\"\n",
     "\n",
@@ -357,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
