--- a/whisper/bunrui.ipynb
+++ b/whisper/bunrui.ipynb
@@ -60,7 +60,7 @@
     "    \n",
     "    elif bunrui_index in [72,75,21]:\n",
     "        #第三区部をここでやる！\n",
-    "        #21はおおやさんが自作した区分、これは↓の処理を施す必要はない\n",
+    "        #21は部長が自作した区分、これは↓の処理を施す必要はない\n",
     "        if bunrui_index in [72,75]:\n",
     "            ask_str = \"あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、\"\n",
     "\n",
@@ -69,7 +69,7 @@
     "        count = 10*bunrui_index + 1 #72→720のように第三区分用に変更する！\n",
     "        while count not in [729,760,217] :\n",
     "            #カウントが区切り出ないときはどんどん追加していく感じ、カウントとリストのインデックスが違うことに注意！！→％つかってあまりで表現かな\n",
-    "            #上のnot in [] の中身に217を追加することでおおやさんの独自仕様に対応\n",
+    "            #上のnot in [] の中身に217を追加することで独自仕様に対応\n",
     "            #print(count)\n",
     "            if bunrui_index ==72:\n",
     "                ask_str += str(count) + \" \"+bunrui_list_72[(count-1)%10] + \"\\n\"\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -242,11 +242,12 @@
       "\n",
       "    「\n",
       "    \n",
-      "松平定信は古典の書写を日課とし、中でも『源氏物語』を7度も書き写しました。平安時代より読み継がれ、定信も愛読した『源氏物語』の世界をご紹介します。\n",
+      "葛飾北斎は、歌川広重とともに浮世絵の世界で「風景画」のジャンルを確立した。各地の名所旧跡を紹介する「名所絵」から一歩進んで、「風景」そのものの美しさ、「風景」と人の世の関わり、といったものを描き出していったのである。その「風景画」に描かれるのは、海や川、そして山。葛飾北斎とその一門の作品を収集しているすみだ北斎美術館の今回の企画展は、そんな中から「山」をフィーチャーした作品をセレクトして展示するものである。\n",
+      "\n",
       "\n",
       "    」\n",
       "\n",
-      "    上記の説明は「新春企画展「松平定信と源氏物語」【特集陳列】〈山〉と〈月〉の日本画／刀剣セレクション3 ー桑博ドラゴンズー」という美術展についての説明文です。\n",
+      "    上記の説明は「北斎　大いなる山岳」という美術展についての説明文です。\n",
       "    さらにこれを見た人が、この展示に関連したキーワードを以下に記載しました。（キーワードがない場合もあります。）\n",
       "    「」\n",
       "    この説明とキーワード・展示名をもとに、この展示を日本十進分類で分類してください。\n",
@@ -275,7 +276,49 @@
       "    分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
       "\n",
       "    \n",
-      "70, 90\n",
+      "10,20,29,30,70\n",
+      "哲学\n",
+      "10 哲学は更に以下のように分けられます。\n",
+      "11 哲学各論\n",
+      "12 東洋思想\n",
+      "13 西洋哲学\n",
+      "14 心理学\n",
+      "15 倫理学、道徳\n",
+      "16 宗教\n",
+      "17 神道\n",
+      "18 仏教\n",
+      "19 キリスト教、ユダヤ教\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "10,20,29,30,70,13\n",
+      "歴史、世界史、文化史\n",
+      "20 歴史、世界史、文化史は更に以下のように分けられます。\n",
+      "21 日本史\n",
+      "22 アジア史、東洋史\n",
+      "23 ヨーロッパ史、西洋史\n",
+      "24 アフリカ史\n",
+      "25 北アメリカ史\n",
+      "26 南アメリカ史\n",
+      "27 オセアニア史、両極地方史\n",
+      "28 人物伝\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "20,29,70\n",
+      "地理、地誌、紀行\n",
+      "社会科学\n",
+      "30 社会科学は更に以下のように分けられます。\n",
+      "31 政治\n",
+      "32 法律\n",
+      "33 経済\n",
+      "34 財政\n",
+      "35 統計\n",
+      "36 社会\n",
+      "37 教育\n",
+      "38 風俗習慣、民俗学、民族学\n",
+      "39 国防、軍事\n",
+      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
+      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
+      "20,29,30,36,70\n",
       "芸術、美術\n",
       "70 芸術、美術は更に以下のように分けられます。\n",
       "71 彫刻、オブジェ\n",
@@ -287,21 +330,7 @@
       "77 演劇、映画、大衆芸能\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "70, 72\n",
-      "文学\n",
-      " 90 文学は更に以下のように分けられます。\n",
-      "91 日本文学\n",
-      "92 中国文学、その他の東洋文学\n",
-      "93 英米文学\n",
-      "94 ドイツ文学、その他のゲルマン文学\n",
-      "95 フランス文学、プロバンス文学\n",
-      "96 スペイン文学、ポルトガル文学\n",
-      "97 イタリア文学、その他のロマンス文学\n",
-      "98 ロシア・ソビエト文学、その他のスラブ文学\n",
-      "99 その他の諸言語文学\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "70, 90, 91\n",
+      "70,72\n",
       "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
       "721 日本画\n",
       "722 東洋画\n",
@@ -313,65 +342,49 @@
       "728 書、書道\n",
       "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
       "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "70, 72, 728\n",
-      "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
-      "721 日本画\n",
-      "722 東洋画\n",
-      "723 洋画\n",
-      "724 絵画材料、技法\n",
-      "725 素描、描画\n",
-      "726 漫画、挿絵、児童画\n",
-      "727 グラフィックデザイン、図案\n",
-      "728 書、書道\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "70, 72, 728\n",
-      "あなたは区分70を選択しましたが、これは更に72　絵画,75 工芸　という分野に分けられます。そして、72 絵画、書、書道は更に以下のように分けられます。\n",
-      "721 日本画\n",
-      "722 東洋画\n",
-      "723 洋画\n",
-      "724 絵画材料、技法\n",
-      "725 素描、描画\n",
-      "726 漫画、挿絵、児童画\n",
-      "727 グラフィックデザイン、図案\n",
-      "728 書、書道\n",
-      "この展示を上記の分類をもとに更に分割してください。重複していても構いません。どれだけ多くても構いません。あなたの想像力が試されます。例えば陶器についての博物館は、芸術・美術だけでなく産業や技術・工学にも関連していると考えられます。浮世絵は日本画と東洋画どちらにも関係していと考えられます。じっくりどれに当てはまるのか考えてください。\n",
-      "出力は分類結果だけを数字を用いて表示してください。例えば「16,49,78,79」のように記述してください。分類は,を使って区別してください。上記の番号以外は絶対に書かなないでください。関連するものがない場合は-1を返してください。\n",
-      "70, 90, 728\n",
-      "[70, 72, 90, 91, 728]\n",
+      "721, 722\n",
+      "[10, 13, 20, 29, 30, 36, 70, 72, 721, 722]\n",
       "ソート終了！！！\n",
       "ーーーーーーーーーーーーーーーーーー\n",
-      "展示名: 新春企画展「松平定信と源氏物語」【特集陳列】〈山〉と〈月〉の日本画／刀剣セレクション3 ー桑博ドラゴンズー\n",
+      "展示名: 北斎　大いなる山岳\n",
       "展示説明: \n",
-      "松平定信は古典の書写を日課とし、中でも『源氏物語』を7度も書き写しました。\n",
-      "平安時代より読み継がれ、定信も愛読した『源氏物語』の世界をご紹介します。\n",
+      "葛飾北斎は、歌川広重とともに浮世絵の世界で「風景画」のジャンルを確立した。\n",
+      "各地の名所旧跡を紹介する「名所絵」から一歩進んで、「風景」そのものの美しさ、「風景」と人の世の関わり、といったものを描き出していったのである。\n",
+      "その「風景画」に描かれるのは、海や川、そして山。\n",
+      "葛飾北斎とその一門の作品を収集しているすみだ北斎美術館の今回の企画展は、そんな中から「山」をフィーチャーした作品をセレクトして展示するものである。\n",
+      "\n",
       "\n",
       "\n",
       "展示キーワード: \n",
       "以下に分類結果を表示します\n",
+      "10 哲学\n",
+      "13 西洋哲学\n",
+      "20 歴史、世界史、文化史\n",
+      "29 地理、地誌、紀行\n",
+      "30 社会科学\n",
+      "36 社会\n",
       "70 芸術、美術\n",
       "72 絵画、書、書道\n",
-      "90 文学\n",
-      "91 日本文学\n",
-      "728 書、書道\n"
+      "721 日本画\n",
+      "722 東洋画\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[70, 72, 90, 91, 728]"
+       "[10, 13, 20, 29, 30, 36, 70, 72, 721, 722]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "exhibition_name = \"宮城県美術館所蔵　絵本原画の世界2022-23\"\n",
+    "exhibition_name = \"北斎　大いなる山岳\"\n",
     "\n",
     "exhibition_describe = \"\"\"\n",
-    "「こどものとも」は芸術性の高い絵本づくりを目指し、1956年に福音館書店から創刊された月刊絵本です。「こどものとも」の魅力として、洋画や日本画、彫刻、漫画など、さまざまな分野で活躍す る作家たちが絵本づくりを手がけたことがあげられます。作家たちは、ものがたりの表現にふさわしい技法や材料を取りいれながら、これまでにない新しい絵本を生み出しました。\n",
+    "葛飾北斎は、歌川広重とともに浮世絵の世界で「風景画」のジャンルを確立した。各地の名所旧跡を紹介する「名所絵」から一歩進んで、「風景」そのものの美しさ、「風景」と人の世の関わり、といったものを描き出していったのである。その「風景画」に描かれるのは、海や川、そして山。葛飾北斎とその一門の作品を収集しているすみだ北斎美術館の今回の企画展は、そんな中から「山」をフィーチャーした作品をセレクトして展示するものである。\n",
     "\n",
     "\"\"\"\n",
     "exhibition_keywords = \"\"\n",
