提案されたものから上位のみを使うように変更

--- a/database/search_database.ipynb
+++ b/database/search_database.ipynb
@@ -594,8 +594,12 @@
     "print(f\"User_Input: {user_input}\")\n",
     "print(f\"Query: {QUERY}\")\n",
     "print(\"Rank: Title Similarity\")\n",
+    "top_suggested_museums = \"\"\n",
     "for i, result in enumerate(results):\n",
     "    print(f'{i+1}: {result[\"number\"]}  {result[\"raw\"][1]} {result[\"raw\"][0]}  {result[\"name\"]} {result[\"similarity\"]}')\n",
+    "\n",
+    "    if i <5:\n",
+    "        top_suggested_museums += f'{i+1}: {result[\"number\"]}  {result[\"raw\"][1]} {result[\"raw\"][0]}  {result[\"name\"]} {result[\"similarity\"]}' + \"\\n\"\n",
     "\n",
     "print(\"====Best Doc====\")\n",
     "print(f'number: {results[0][\"number\"]}')\n",
@@ -606,8 +610,10 @@
     "print(f'name: {results[-1][\"name\"]}')\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "result = results[0]\n",
-    "second_msg = f\"\"\"\n",
+    "third_msg = f\"\"\"\n",
     "上記のキーワードをもとに検索した結果、{result[\"raw\"][1]} の{result[\"raw\"][0]}で開催される「{result[\"name\"]}」という展示が検索エンジンから提案されました。\n",
     "またその展示内容は次のように紹介されていました。\n",
     "「{result[\"raw\"][6]}」\n",
@@ -617,8 +623,8 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "print(second_msg)\n",
-    "messages = [{\"role\": \"system\", \"content\": init_role_describe},{\"role\": \"user\", \"content\": message},{\"role\":\"assistant\",\"content\":QUERY} ,{\"role\": \"user\", \"content\": second_msg}]\n",
+    "print(third_msg)\n",
+    "messages = [{\"role\": \"system\", \"content\": init_role_describe},{\"role\": \"user\", \"content\": message},{\"role\":\"assistant\",\"content\":QUERY} ,{\"role\": \"user\", \"content\": third_msg}]\n",
     "\n",
     "response = openai.ChatCompletion.create(\n",
     "    model=\"gpt-4\",\n",
