repair search_database

--- a/database/search_database.ipynb
+++ b/database/search_database.ipynb
@@ -521,40 +521,40 @@
     "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
     "openai.api_key = OPENAI_API_KEY\n",
     "\n",
+    "\n",
+    "exhibition_count = 10\n",
+    "\n",
+    "\n",
     "# データベースの読み込み\n",
     "with open('embedding.json') as f:\n",
     "    INDEX = json.load(f)\n",
     "\n",
-    "print(\"json_loaded\")\n",
+    "user_input = \"海賊王に、俺はなるっ！！！\"\n",
     "\n",
-    "\n",
-    "\n",
-    "user_input = \"車が好きです。見たり乗ったりしてみたいです\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "init_role_describe = f\"\"\"\n",
-    "あなたは優秀な検索エンジンです。あなたはユーザーからの入力を元に、博物館内の展示を探す必要があります。そのための検索用の単語を出力しなくてはいけません。\n",
-    "出力は単語のみを出力してください。説明文などは必要ありません。各単語を、で区切って出力してください。\n",
+    "init_role_describe = \"\"\"あなたは優秀な検索エンジンです。あなたはユーザーからの入力を元に、博物館内の展示を探す必要があります。そのための検索用の単語を出力しなくてはいけません。\n",
+    "出力は単語のみを出力してください。説明文などは必要ありません。各単語を\",\"で区切って出力してください。\n",
     "\"\"\"\n",
-    "message = f\"\"\"\n",
     "\n",
-    "「{user_input}」\n",
+    "message = f\"\"\"「{user_input}」\n",
     "というユーザーからの文章を元に展示を調べなくてはいけません。\n",
-    "調べるための単語を、複数個列挙してください。\n",
-    "とにかく関連しそうなワードを挙げてください。あなたの想像力が試されます。１０個は出力してください。\n",
+    "検索するための単語を、複数個あげてください。\n",
+    "とにかく関連しそうなワードを挙げてください。\n",
     "このユーザーがどんなものが好きそうなのか、想像してみてください。\n",
     "\"\"\"\n",
     "\n",
-    "messages = [{\"role\": \"system\", \"content\": init_role_describe},{\"role\": \"user\", \"content\": message},]\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": init_role_describe},\n",
+    "    {\"role\": \"user\", \"content\": message}\n",
+    "]\n",
     "\n",
     "response = openai.ChatCompletion.create(\n",
-    "    model=\"gpt-3.5-turbo\",\n",
+    "    model=\"gpt-4\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
     "# これが検索用の文字列\n",
     "QUERY  = response.choices[0][\"message\"][\"content\"].strip()\n",
+    "\n",
     "\n",
     "\n",
     "# 検索用の文字列をベクトル化\n",
@@ -584,16 +584,51 @@
     "print(f\"User_Input: {user_input}\")\n",
     "print(f\"Query: {QUERY}\")\n",
     "print(\"Rank: Title Similarity\")\n",
-    "for i, result in enumerate(results):\n",
+    "top_suggested_museums = \"\"\n",
+    "for i, result in enumerate(results[:exhibition_count]):\n",
     "    print(f'{i+1}: {result[\"number\"]}  {result[\"raw\"][1]} {result[\"raw\"][0]}  {result[\"name\"]} {result[\"similarity\"]}')\n",
     "\n",
-    "print(\"====Best Doc====\")\n",
-    "print(f'number: {results[0][\"number\"]}')\n",
-    "print(f'name: {results[0][\"name\"]}')\n",
+    "# print(\"====Best Doc====\")\n",
+    "# print(f'number: {results[0][\"number\"]}')\n",
+    "# print(f'name: {results[0][\"name\"]}')\n",
     "\n",
-    "print(\"====Worst Doc====\")\n",
-    "print(f'number: {results[-1][\"number\"]}')\n",
-    "print(f'name: {results[-1][\"name\"]}')"
+    "# print(\"====Worst Doc====\")\n",
+    "# print(f'number: {results[-1][\"number\"]}')\n",
+    "# print(f'name: {results[-1][\"name\"]}')\n",
+    "\n",
+    "exhibition_text = \"\\n\".join([f\"{index+1}. \" + exhibition[\"embedding_text\"] for index, exhibition in enumerate(results[:exhibition_count])])\n",
+    "\n",
+    "third_msg = f\"\"\"\n",
+    "上記のキーワードをもとに検索した結果、以下の{exhibition_count}個の展示が検索エンジンから提案されました。\n",
+    "{exhibition_text}\n",
+    "この{exhibition_count}個の展示からひとつユーザーに対して提案しようと思うのですが、\n",
+    "これらの情報とユーザーからの入力をもとに、ユーザーの入力に対してフレンドリーな返答をしてください。\n",
+    "ユーザーの考えを読み取り、ユーザーが聞いて楽しいような返答を心がけてください。\n",
+    "出力は以下の形式で行ってください。\n",
+    "{{\n",
+    "    \"exhibition_number\": {{展示番号}},\n",
+    "    \"exhibition_name\": {{展示名}},\n",
+    "    \"exhibition_reason\": {{その展示を選んだ理由}}\n",
+    "}}\n",
+    "\"\"\"\n",
+    "\n",
+    "print(third_msg)\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": init_role_describe},\n",
+    "    {\"role\": \"user\", \"content\": message},\n",
+    "    {\"role\":\"assistant\",\"content\":QUERY},\n",
+    "    {\"role\": \"user\", \"content\": third_msg}\n",
+    "]\n",
+    "\n",
+    "response = openai.ChatCompletion.create(\n",
+    "    model=\"gpt-4\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "# 最終的な出力\n",
+    "output  = response.choices[0][\"message\"][\"content\"].strip()\n",
+    "\n",
+    "print(output)"
    ]
   }
  ],
