append websocket related scripts

--- a/database/search_database.ipynb
+++ b/database/search_database.ipynb
@@ -311,32 +311,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User_Input: 古代中国史に興味があります！当時の作品を見てみたいです\n",
-      "Query: \"古代中国\",\"歴史\",\"陶器\",\"青銅器\",\"文物\",\"考古\",\"遺物\",\"秦の兵馬俑\",\"書道\",\"絵画\",\"仏像\",\"漢字\",\"文書\",\"楚越鏡\",\"四神獣\",\"易経\",\"殷周青銅器\",\"佛教美術\",\"風水\",\"丝绸之路\"\n",
+      "User_Input: 彼女と博物館デートに行きたいと思っています。彼女も僕も民俗学に興味があります。\n",
+      "Query: 民俗学,伝統,良俗,風俗,民族衣装,祭り,伝説,民話,生活道具,民家\n",
       "Rank: Title Similarity\n",
-      "1: 57  京都府 泉屋博古館  中国青銅器の時代 0.8713426745347196\n",
-      "2: 94  兵庫県 白鶴美術館  秋季展「中国陶磁の植物文」「アナトリア絨毯の植物文」 0.8628960044774857\n",
-      "3: 43  京都府 京都市動物園  青銅器になった動物たち 0.844277535278818\n",
-      "4: 101  兵庫県 兵庫県立歴史博物館  開館40周年記念企画展「ひょうご五国のやきもの」 0.8387036157790381\n",
-      "5: 68  大阪府 大阪歴史博物館  なにわの考古学 0.8380313160752902\n",
+      "1: 151  大阪府 国立民族学博物館  常設展 0.8470222130082268\n",
+      "2: 137  和歌山県 和歌山市立博物館  歴史を語る道具たち 0.8368315529473707\n",
+      "3: 108  兵庫県 小野市立好古館  お堂の道具あれこれー小野市文化財悉皆調査速報展2ー 0.8286482725033608\n",
+      "4: 27  京都府 京都市学校歴史博物館  きらめきはぐくむ 京都の学校と伝統工芸――西陣織・京友禅・京焼―― 0.8276026623779067\n",
+      "5: 111  奈良県 公益財団法人名勝依水園・寧楽美術館  やきもの用語実見展　虫喰い、口紅ってなんだろう?? 0.8272390238690346\n",
       "\n",
       "上記のキーワードをもとに検索した結果、以下の5個の展示が検索エンジンから提案されました。\n",
-      "1. 京都府にある泉屋博古館で行われる中国青銅器の時代は2023/9/9から2023/12/10まで開催されます。その内容は住友コレクションと言えば、中国青銅器。今から3000年以上前の殷の時代から、中国では高度な鋳造技術が発達し、繊細で複雑な造形の青銅器が数多く生み出されました。その魅力を様々な角度から、4つの展示室のテーマに沿ってご紹介いたします。世界有数の呼び声も高い住友コレクションの中国青銅器、その精緻な美しさに是非触れてみてください。。分類：アジア史．東洋史,動物,工芸全般,金工芸,芸術．美術\n",
-      "2. 兵庫県にある白鶴美術館で行われる秋季展「中国陶磁の植物文」「アナトリア絨毯の植物文」は2023/9/20から2023/12/10まで開催されます。その内容は白鶴コレクションより、中国の等式を彩る植物文を中心に紹介しながら、作品の特徴を捉えていく展示とします。中国には吉祥を表す文様が多く描かれます。常緑の松は長命を寿ぐ象徴として、描かれてきた図像でしょう。植物文のなかで柘榴や唐草文なども繁栄を願う文様です。その他、時代を超えて描かれてきた富貴な牡丹や清廉な蓮、優雅な文人を表す梅など。中国陶磁器の各作品から植物文様の装飾性とイメージを見ていきます。。分類：中国文学．その他の東洋文学,陶磁工芸\n",
-      "3. 京都府にある京都市動物園で行われる青銅器になった動物たちは2023/11/3から2023/12/10まで開催されます。その内容は中国古代青銅器のモチーフとなった動物たち。園内で飼育している数種類の動物を、考古学の視点からお楽しみいただけるよう中国古代青銅器の解説パネルを設置します。。分類：アジア史．東洋史,金工芸\n",
-      "4. 兵庫県にある兵庫県立歴史博物館で行われる開館40周年記念企画展「ひょうご五国のやきもの」は2023/9/23から2023/11/26まで開催されます。その内容はひょうご五国（摂津、播磨、但馬、丹波、淡路）の各地では古くから様々な陶磁器が焼かれ、その作品や技の一部は現在まで受け継がれてきました。これらについて当館のコレクションを中心に紹介します。各地の多彩なやきものや、それらを生み出した兵庫県各地の魅力に触れていただければ幸いです。。分類：未分類\n",
-      "5. 大阪府にある大阪歴史博物館で行われるなにわの考古学は2023/10/4から2024/1/8まで開催されます。その内容は本展覧会では、住吉区山之内遺跡で出土した旧石器時代から縄文時代にかけての狩猟具、JR新大阪駅付近にある西中島７丁目所在遺跡B地点で見つかった古代～中世の建物跡と土器群、中世の信仰をうかがうことのできる浪速区浪速東遺跡出土の杮経こけらきょうなどを展示します。。分類：未分類\n",
-      "この5個の展示からひとつユーザーに対して提案しようと思うのですが、\n",
-      "これらの情報とユーザーからの入力をもとに、ユーザーの入力に対してフレンドリーな返答をしてください。\n",
-      "ユーザーの考えを読み取り、ユーザーが聞いて楽しいような返答を心がけてください。\n",
-      "出力は以下の形式で行ってください。\n",
+      "1. 大阪府にある国立民族学博物館で行われる常設展は2023/1/1から2023/12/31まで開催されます。その内容は本館における展示は、地域展示と通文化展示からなっています。地域展示では、世界をオセアニア、アメリカ、ヨーロッパ、アフリカ、それに日本を含むアジア各地域に分け、オセアニアを出発して東回りに世界を一周し、最後に日本にたどり着く構成をとっています。日本の文化を世界各地の文化との関連の中で理解できるように配慮したものです。民博では、創設以来、世界の民族文化に優劣はなく、すべて等しい価値をもつという認識にもとづいて、展示をつくり上げてきました。それぞれの文化に見られる違いは、人類の営みの豊かな多様性を示すものとして展示されています。また、世界の人びとの暮らしがよくわかるように、衣食住などの生活用品を中心とした展示になっているのも特徴のひとつです。。分類：風俗習慣．民俗学．民族学\n",
+      "2. 和歌山県にある和歌山市立博物館で行われる歴史を語る道具たちは2024/1/16から2024/3/3まで開催されます。その内容は民具や農具を「くらしの道具」・「遊びと勉強」・「あかりの道具」・「食事の道具」・「はかる道具」・「あたたまる道具」・「米作りの道具」の7つに分けて展示します。。分類：未分類\n",
+      "3. 兵庫県にある小野市立好古館で行われるお堂の道具あれこれー小野市文化財悉皆調査速報展2ーは2023/10/7から2023/12/3まで開催されます。その内容は令和3年度と4年度にかけて、市内の仏堂（仏像などを安置する村の建物）に保存されている文化財を全て調べました〈悉皆(しっかい)調査〉。そこで、数ある文化財の中から、お堂でむかしから使われてきた香時計や掛軸などを約25点紹介します。この機会に、わが町の歴史・文化を再発見してみませんか。。分類：未分類\n",
+      "4. 京都府にある京都市学校歴史博物館で行われるきらめきはぐくむ 京都の学校と伝統工芸――西陣織・京友禅・京焼――は2023/9/14から2023/12/17まで開催されます。その内容は京都市学校歴史博物館では、京都市の学校に伝わる、学校や地域にゆかりのある芸術家たちが手がけた作品や、地域の人たちから贈られた作品を管理しています。それらの中には、地域と関係が深い西陣織・京友禅・京焼など、伝統工芸の作品も含まれています。当館の開館２５周年を記念した企画展「きらめきはぐくむ 京都の学校と伝統工芸――西陣織・京友禅・京焼――」は、京都を輝かせてきた伝統工芸と学校とのつながりにあらためて注目する企画展です。京都市の学校園に伝わる伝統工芸の作品を中心に、伝統工芸にたずさわる家に生まれた画家たちによる学校への寄贈作品を展示します。あわせて、地域の伝統工芸の魅力が、学校で子どもたちへとどのように伝えられてきたかをうかがい知ることができる学校の記録なども御覧いただきます。きらめく伝統工芸が京都の学校でどのように育まれてきたのか、作品を通してみてみましょう。。分類：地理．地誌．紀行,日本史全般,芸術．美術,日本画,陶磁工芸,染織工芸\n",
+      "5. 奈良県にある公益財団法人名勝依水園・寧楽美術館で行われるやきもの用語実見展　虫喰い、口紅ってなんだろう??は2023/8/11から2023/12/24まで開催されます。その内容は日本にはやきものを愛するがゆえに生み出された多くのやきもの用語が存在します。中にはユーモラスな表現のものも。本展では、やきものの製作技法や見どころに関する用語を、実際の事例とともに紹介します。やきもの鑑賞の楽しみがいっそう深まれば幸いです。。分類：未分類\n",
+      "この5個の展示からひとつ来客者様に対して提案しようと思うのですが、\n",
+      "これらの情報と来客者様からの入力をもとに、来客者様の入力に対してフレンドリーな返答をしてください。\n",
+      "来客者様の考えを読み取り、来客者様が聞いて楽しいような返答を心がけてください。\n",
+      "出力は以下の形式で行ってください。日本語で返答してください。\n",
       "{\n",
       "    \"exhibition_number\": {展示番号},\n",
       "    \"exhibition_name\": {展示名},\n",
@@ -345,8 +345,8 @@
       "\n",
       "{\n",
       "    \"exhibition_number\": 1,\n",
-      "    \"exhibition_name\": \"中国青銅器の時代\",\n",
-      "    \"exhibition_reason\": \"古代中国史に興味があるとのことで、3000年以上前の殷の時代から生み出された繊細で複雑な造形の青銅器を見ることができるこの展示は、きっとあなたの心を満足させてくれることでしょう。\"\n",
+      "    \"exhibition_name\": \"国立民族学博物館の常設展\",\n",
+      "    \"exhibition_reason\": \"来客者様が民俗学に興味があるとのことで、ここ国立民族学博物館では世界の各地域の民族文化や生活道具を展示しています。毎日の生活を彩る衣食住のアイテムを中心に、様々な文化の情報を得ることができます。デートスポットとしても楽しみながら学べる場となり、民俗学への関心も深めることができるでしょう。\"\n",
       "}\n"
      ]
     }
@@ -370,17 +370,17 @@
     "with open('embedding.json') as f:\n",
     "    INDEX = json.load(f)\n",
     "\n",
-    "user_input = \"古代中国史に興味があります！当時の作品を見てみたいです\"\n",
-    "\n",
-    "init_role_describe = \"\"\"あなたは優秀な検索エンジンです。あなたはユーザーからの入力を元に、博物館内の展示を探す必要があります。そのための検索用の単語を出力しなくてはいけません。\n",
+    "user_input = \"モナリザとかはどこに行けば見れますか？\"\n",
+    "print(f\"User_Input: {user_input}\")\n",
+    "init_role_describe = \"\"\"あなたは優秀な検索エンジンです。あなたは来客者様からの入力を元に、博物館内の展示を探す必要があります。そのための検索用の単語を出力しなくてはいけません。\n",
     "出力は単語のみを出力してください。説明文などは必要ありません。各単語を\",\"で区切って出力してください。\n",
     "\"\"\"\n",
     "\n",
     "message = f\"\"\"「{user_input}」\n",
-    "というユーザーからの文章を元に展示を調べなくてはいけません。\n",
-    "検索するための単語を、複数個あげてください。10~20個ほどあればよいでしょう。\n",
+    "という来客者様からの文章を元に展示を調べなくてはいけません。\n",
+    "検索するための単語を、複数個あげてください。10個ほどあればよいでしょう。\n",
     "とにかく関連しそうなワードを挙げてください。\n",
-    "このユーザーがどんなものが好きそうなのか、想像してみてください。\n",
+    "この来客者様がどんなものが好きそうなのか、想像してみてください。\n",
     "\"\"\"\n",
     "\n",
     "messages = [\n",
@@ -395,8 +395,7 @@
     "\n",
     "# これが検索用の文字列\n",
     "QUERY  = response.choices[0][\"message\"][\"content\"].strip()\n",
-    "\n",
-    "\n",
+    "print(f\"Query: {QUERY}\")\n",
     "\n",
     "# 検索用の文字列をベクトル化\n",
     "query = openai.Embedding.create(\n",
@@ -422,8 +421,8 @@
     "results = sorted(results, key=lambda i: i['similarity'], reverse=True)\n",
     "\n",
     "# 以下で結果を表示\n",
-    "print(f\"User_Input: {user_input}\")\n",
-    "print(f\"Query: {QUERY}\")\n",
+    "\n",
+    "\n",
     "print(\"Rank: Title Similarity\")\n",
     "top_suggested_museums = \"\"\n",
     "for i, result in enumerate(results[:exhibition_count]):\n",
@@ -442,10 +441,10 @@
     "third_msg = f\"\"\"\n",
     "上記のキーワードをもとに検索した結果、以下の{exhibition_count}個の展示が検索エンジンから提案されました。\n",
     "{exhibition_text}\n",
-    "この{exhibition_count}個の展示からひとつユーザーに対して提案しようと思うのですが、\n",
-    "これらの情報とユーザーからの入力をもとに、ユーザーの入力に対してフレンドリーな返答をしてください。\n",
-    "ユーザーの考えを読み取り、ユーザーが聞いて楽しいような返答を心がけてください。\n",
-    "出力は以下の形式で行ってください。\n",
+    "この{exhibition_count}個の展示からひとつ来客者様に対して提案しようと思うのですが、\n",
+    "これらの情報と来客者様からの入力をもとに、来客者様の入力に対してフレンドリーな返答をしてください。\n",
+    "来客者様の考えを読み取り、来客者様が聞いて楽しいような返答を心がけてください。\n",
+    "出力は以下の形式で行ってください。日本語で返答してください。\n",
     "{{\n",
     "    \"exhibition_number\": {{展示番号}},\n",
     "    \"exhibition_name\": {{展示名}},\n",
